option java_outer_classname = "LCUpCommonRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal";

import "core/proto/common/java/ResponseResult.proto";

message UpCommonRes{
	required int32 serialNumber 			= 1;
	required int32 responseId 				= 2;
	required ResponseResult result 			= 3;
}
